# pdf-hunter

./: .dockerignore  .env-example  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  install.sh  langgraph.json  package-lock.json  package.json  pyproject.toml  requirements.txt  verify_installation.py
.github/: copilot-instructions.md
docs/: FRONTEND_DEV_MODE.md  FRONTEND_VISION.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_ROADMAP.md  LOGGING_FIELD_REFERENCE.md  LOGGING_GUIDE.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md
frontend/: CLAUDE.md  Dockerfile  FIELD_SCHEMA_ENRICHMENT.md  FIELD_SCHEMA_IMPLEMENTATION.md  FIELD_SCHEMA_README.md  QUICKSTART.md  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/.github/: copilot-instructions.md
frontend/dev/: README.md  mock-session.jsonl
frontend/src/: App.jsx  index.css
frontend/src/components/: AgentDetailModal.jsx  AgentPanel.jsx  ConnectionNetwork.jsx  Dashboard.jsx  FlowingConnection.jsx  LandingPage.jsx  LogViewer.jsx  Sidebar.jsx  TransitionAnimation.jsx  ViewModeToggle.jsx
frontend/src/config/: api.js  logFieldSchema.js
frontend/src/examples/: fieldExtractionExamples.js  testPdfExtraction.js
frontend/src/hooks/: useSSEStream.js
frontend/src/utils/: fieldExtractor.js  logUtils.js  mockDataLoader.js
notebooks/development/: file_analysis.ipynb  image_analysis.ipynb  link_analysis_agent.ipynb  orchestrator.ipynb  pdf_extraction.ipynb  report_generator.ipynb  static_analysis.ipynb  url_investigation.ipynb  utils.py
output/242fc6a46e4b36fcc00a3cfaabefe29a8cf8a5c9_20251029_181451/: analysis_report_session_242fc6a46e4b36fcc00a3cfaabefe29a8cf8a5c9_20251029_181451.json
output/242fc6a46e4b36fcc00a3cfaabefe29a8cf8a5c9_20251029_181451/file_analysis/: file_analysis_final_state_session_242fc6a46e4b36fcc00a3cfaabefe29a8cf8a5c9_20251029_181451.json
output/242fc6a46e4b36fcc00a3cfaabefe29a8cf8a5c9_20251029_181451/image_analysis/: image_analysis_state_session_242fc6a46e4b36fcc00a3cfaabefe29a8cf8a5c9_20251029_181451.json
output/242fc6a46e4b36fcc00a3cfaabefe29a8cf8a5c9_20251029_181451/pdf_extraction/: pdf_extraction_final_state_session_242fc6a46e4b36fcc00a3cfaabefe29a8cf8a5c9_20251029_181451.json
output/242fc6a46e4b36fcc00a3cfaabefe29a8cf8a5c9_20251029_181451/report_generator/: final_report_session_242fc6a46e4b36fcc00a3cfaabefe29a8cf8a5c9_20251029_181451.md
output/242fc6a46e4b36fcc00a3cfaabefe29a8cf8a5c9_20251029_181451/url_investigation/: url_investigation_state_session_242fc6a46e4b36fcc00a3cfaabefe29a8cf8a5c9_20251029_181451.json
output/401085b06add6611ef012bcaa5ded8f285840814_20251106_161639/file_analysis/: file_analysis_final_state_session_401085b06add6611ef012bcaa5ded8f285840814_20251106_161639.json
output/401085b06add6611ef012bcaa5ded8f285840814_20251106_161639/image_analysis/: image_analysis_state_session_401085b06add6611ef012bcaa5ded8f285840814_20251106_161639.json
output/401085b06add6611ef012bcaa5ded8f285840814_20251106_161639/pdf_extraction/: pdf_extraction_final_state_session_401085b06add6611ef012bcaa5ded8f285840814_20251106_161639.json
output/401085b06add6611ef012bcaa5ded8f285840814_20251106_161639/report_generator/: final_report_session_401085b06add6611ef012bcaa5ded8f285840814_20251106_161639.md  final_state_session_401085b06add6611ef012bcaa5ded8f285840814_20251106_161639.json
output/401085b06add6611ef012bcaa5ded8f285840814_20251106_161639/url_investigation/: url_investigation_state_session_401085b06add6611ef012bcaa5ded8f285840814_20251106_161639.json
src/pdf_hunter/: config.py
src/pdf_hunter/agents/file_analysis/: FILE_ANALYSIS.md  cli.py  graph.py  nodes.py  prompts.py  schemas.py  tools.py
src/pdf_hunter/agents/finalizer/: graph.py  nodes.py  schemas.py
src/pdf_hunter/agents/image_analysis/: IMAGE_ANALYSIS.md  cli.py  graph.py  nodes.py  prompts.py  schemas.py
src/pdf_hunter/agents/link_analysis/: graph.py  nodes.py  prompts.py  schemas.py  tools.py
src/pdf_hunter/agents/pdf_extraction/: PDF_EXTRACTION.md  cli.py  graph.py  nodes.py  schemas.py
src/pdf_hunter/agents/preprocessing/: graph.py  nodes.py  schemas.py
src/pdf_hunter/agents/report_generator/: REPORT_GENERATOR.md  cli.py  graph.py  nodes.py  prompts.py  schemas.py
src/pdf_hunter/agents/static_analysis/: graph.py  nodes.py  prompts.py  schemas.py  tools.py
src/pdf_hunter/agents/url_investigation/: URL_INVESTIGATION.md  cli.py  graph.py  nodes.py  prompts.py  schemas.py  sync_runner.py  tools.py
src/pdf_hunter/agents/visual_analysis/: graph.py  nodes.py  prompts.py  schemas.py
src/pdf_hunter/api/: README.md  __init__.py  server.py
src/pdf_hunter/config/: __init__.py  execution_config.py  logging_config.py  models_config.py  pymupdf_config.py
src/pdf_hunter/orchestrator/: ORCHESTRATOR.md  cli.py  graph.py  nodes.py  schemas.py
src/pdf_hunter/shared/analyzers/: wrappers.py
tests/agents/: test_file_analysis_errors.py  test_file_analysis_xmp_tool.py  test_image_analysis_errors.py  test_pdf_extraction_errors.py  test_pdf_extraction_xmp.py  test_report_generator_errors.py  test_url_investigation_errors.py  test_xmp_url_extraction.py
tests/api/: __init__.py  test_complete_flow.py  test_server.py  test_session_redirect.py  test_sse_manual.py  test_sse_sink.py
tests/assets/pdfs/: pdf_source_reference.md
(+18 files in other folders)
