[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "pdf-hunter"
version = "0.1.0"
description = "PDF analysis/hunting tools"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.14",
    "aiosignal==1.4.0",
    "aiosqlite==0.21.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "appdirs==1.4.4",
    "appnope==0.1.4",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "async-lru==2.0.5",
    "attrs==25.3.0",
    "babel==2.17.0",
    "beautifulsoup4==4.13.4",
    "bleach==6.2.0",
    "blockbuster==1.5.25",
    "certifi==2025.7.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "comm==0.2.2",
    "cryptography==44.0.3",
    "dataclasses-json==0.6.7",
    "debugpy==1.8.15",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "distro==1.9.0",
    "dydantic==0.0.8",
    "editorconfig==0.17.1",
    "executing==2.2.0",
    "fastjsonschema==2.21.1",
    "forbiddenfruit==0.1.4",
    "fqdn==1.5.1",
    "frozenlist==1.7.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "idna==3.10",
    "imagehash==4.3.2",
    "importlib-metadata==8.7.0",
    "ipython==9.4.0",
    "ipython-pygments-lexers==1.1.1",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "jsbeautifier==1.15.4",
    "json5==0.12.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.24.1",
    "jsonschema-rs==0.29.1",
    "jsonschema-specifications==2025.4.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server==2.16.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "langchain==0.3.26",
    "langchain-community==0.3.27",
    "langchain-core==0.3.69",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai==0.3.28",
    "langchain-text-splitters==0.3.8",
    "langgraph>=0.5.3",
    "langgraph-api>=0.4.7",
    "langgraph-checkpoint>=2.1.1",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "langgraph-cli>=0.3.5",
    "langgraph-prebuilt>=0.5.2",
    "langgraph-runtime-inmem>=0.6.0",
    "langgraph-sdk>=0.1.73",
    "langsmith==0.4.7",
    "lxml==6.0.1",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "matplotlib-inline==0.1.7",
    "mistune==3.1.3",
    "multidict==6.6.3",
    "mypy-extensions==1.1.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "notebook==7.4.4",
    "notebook-shim==0.2.4",
    "numpy==2.3.1",
    "openai==1.97.0",
    "opencv-python>=4.11.0.86",
    "orjson==3.11.0",
    "ormsgpack==1.10.0",
    "overrides==7.7.0",
    "packaging==25.0",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pdfid==1.1.3",
    "peepdf-3==5.1.1",
    "pexpect==4.9.0",
    "pillow==11.3.0",
    "platformdirs==4.3.8",
    "prettytable==3.16.0",
    "prometheus-client==0.22.1",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.2",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pyee==11.1.1",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pymupdf==1.26.3",
    "pypdf==6.0.0",
    "pyppeteer==2.0.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-json-logger==3.3.0",
    "python-whois>=0.9.5",
    "pythonaes==1.0",
    "pywavelets==1.8.0",
    "pyyaml==6.0.2",
    "pyzbar>=0.1.9",
    "pyzmq==27.0.0",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "requests-toolbelt==1.0.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rpds-py==0.26.0",
    "scipy==1.16.0",
    "send2trash==1.8.3",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==2.0.41",
    "sqlite-vec==0.1.6",
    "sse-starlette==2.1.3",
    "stack-data==0.6.3",
    "starlette==0.47.1",
    "stpyv8==13.1.201.22",
    "structlog==25.4.0",
    "tavily-python==0.7.10",
    "tenacity==9.1.2",
    "terminado==0.18.1",
    "tiktoken==0.9.0",
    "tinycss2==1.4.0",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "trustcall==0.0.39",
    "truststore==0.10.1",
    "types-python-dateutil==2.9.0.20250708",
    "typing-extensions==4.14.1",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "uri-template==1.3.0",
    "urllib3==1.26.20",
    "uvicorn==0.35.0",
    "watchfiles==1.1.0",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "websockets==10.4",
    "wikipedia==1.4.0",
    "xxhash==3.5.0",
    "yarl==1.20.1",
    "zipp==3.23.0",
    "zstandard==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_hunter"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.4",
]

# You can add or change metadata anytime later, e.g.:
# [project.urls]
# Homepage = "https://example.com"
# Repository = "https://example.com/repo.git"